@@ -526,6 +526,10 @@ HISTORY
 
   ++ Bug fixes:
 
+  2007-12-20 Kieran Mansley (based on patch from Per-Henrik Lundbolm)
+  * tcp.c, tcp_in.c, tcp_out.c, tcp.h: fix bug #20199 (better handling
+    of silly window avoidance and prevent lwIP from shrinking the window)
+
   2007-12-04 Simon Goldschmidt
   * tcp.c, tcp_in.c: fix bug #21699 (segment leak in ooseq processing when last
     data packet was lost): add assert that all segment lists are empty in
